@@ -72,6 +72,9 @@ serialWebRequests.cpp \
 balance.cpp \
 PaymentReportPage.cpp \
 CheckboxButton.cpp \
+BlueprintHouseGridDisplay.cpp \
+ViewBlueprintPage.cpp \
+
 
 
 
